test-app/nginx-hello-world/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-service
  namespace: kube-system
spec:
  selector:
    app: nginx-hello
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
